--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -48,7 +48,7 @@
     <ClCompile Include="Notification\NotificationWidget.cpp" />
     <ClCompile Include="Processor\BaseProcessor.cpp" />
     <ClCompile Include="Processor\CLAHE.cpp" />
-    <ClCompile Include="Processor\CommonProcessor.cpp" />
+    <ClCompile Include="Processor\BrightnessAndContrastProcessor.cpp" />
     <ClCompile Include="Processor\CurvesProcessor.cpp" />
     <ClCompile Include="Processor\EqualizationProcessor.cpp" />
     <ClCompile Include="Processor\HistogramProcessor.cpp" />
@@ -110,7 +110,7 @@
     <QtMoc Include="Notification\NotificationWidget.h" />
     <QtMoc Include="Processor\BaseProcessor.h" />
     <ClInclude Include="Processor\CLAHE.h" />
-    <ClInclude Include="Processor\CommonProcessor.h" />
+    <QtMoc Include="Processor\BrightnessAndContrastProcessor.h" />
     <ClInclude Include="Processor\CurvesProcessor.h" />
     <QtMoc Include="Processor\EqualizationProcessor.h" />
     <ClInclude Include="Processor\HistogramProcessor.h" />
