--- a/NovaImage.vcxproj.filters
+++ b/NovaImage.vcxproj.filters
@@ -81,9 +81,6 @@
     <ClCompile Include="Processor\BaseProcessor.cpp">
       <Filter>Processor</Filter>
     </ClCompile>
-    <ClCompile Include="Processor\CommonProcessor.cpp">
-      <Filter>Processor</Filter>
-    </ClCompile>
     <ClCompile Include="Processor\CurvesProcessor.cpp">
       <Filter>Processor</Filter>
     </ClCompile>
@@ -213,6 +210,9 @@
     <ClCompile Include="Widget\ProcessorBaseWidget.cpp">
       <Filter>Widget</Filter>
     </ClCompile>
+    <ClCompile Include="Processor\BrightnessAndContrastProcessor.cpp">
+      <Filter>Processor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Widget\BaseWidget.h">
@@ -341,6 +341,9 @@
     <QtMoc Include="Widget\ProcessorBaseWidget.h">
       <Filter>Widget</Filter>
     </QtMoc>
+    <QtMoc Include="Processor\BrightnessAndContrastProcessor.h">
+      <Filter>Processor</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Image\BaseImage.h">
@@ -372,9 +375,6 @@
     </ClInclude>
     <ClInclude Include="Image\MonoImage.h">
       <Filter>Image</Filter>
-    </ClInclude>
-    <ClInclude Include="Processor\CommonProcessor.h">
-      <Filter>Processor</Filter>
     </ClInclude>
     <ClInclude Include="Processor\CurvesProcessor.h">
       <Filter>Processor</Filter>
