Implement GammaTransformationProcessor class

--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -51,6 +51,7 @@
     <ClCompile Include="Processor\BrightnessAndContrastProcessor.cpp" />
     <ClCompile Include="Processor\CurvesProcessor.cpp" />
     <ClCompile Include="Processor\EqualizationProcessor.cpp" />
+    <ClCompile Include="Processor\GammaTransformationProcessor.cpp" />
     <ClCompile Include="Processor\HistogramProcessor.cpp" />
     <ClCompile Include="Processor\InverseProcessor.cpp" />
     <ClCompile Include="Processor\LevelsProcessor.cpp" />
@@ -112,6 +113,7 @@
     <QtMoc Include="Processor\BrightnessAndContrastProcessor.h" />
     <ClInclude Include="Processor\CurvesProcessor.h" />
     <QtMoc Include="Processor\EqualizationProcessor.h" />
+    <QtMoc Include="Processor\GammaTransformationProcessor.h" />
     <ClInclude Include="Processor\HistogramProcessor.h" />
     <ClInclude Include="Processor\InverseProcessor.h" />
     <ClInclude Include="Processor\LevelsProcessor.h" />
