--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -198,7 +198,7 @@
   </PropertyGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;gui;printsupport;widgets;charts</QtModules>
+    <QtModules>charts;core;gui;printsupport;widgets;xml</QtModules>
   </PropertyGroup>
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.props')">
     <Import Project="$(QtMsBuild)\qt.props" />
