--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="Processor\HistogramProcessor.cpp" />
     <ClCompile Include="Processor\InverseProcessor.cpp" />
     <ClCompile Include="Processor\LevelsProcessor.cpp" />
+    <ClCompile Include="Processor\LightFieldCorrectionProcessor.cpp" />
     <ClCompile Include="Processor\ThresholdSegmentationProcessor.cpp" />
     <ClCompile Include="Widget\ChartView.cpp" />
     <ClCompile Include="Widget\ColorButton.cpp" />
@@ -124,6 +125,7 @@
     <QtMoc Include="Widget\ImageQualityDialog.h" />
     <QtMoc Include="Widget\ImageQualityChartView.h" />
     <QtMoc Include="Processor\ThresholdSegmentationProcessor.h" />
+    <QtMoc Include="Processor\LightFieldCorrectionProcessor.h" />
     <ClInclude Include="Widget\CustomEvent.h" />
     <ClInclude Include="Widget\Peg.h" />
     <QtMoc Include="Widget\ToolBoxWidget.h" />
