Add about dialog

--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -37,6 +37,12 @@
     <ClCompile Include="Diagram\DiagramLineItem.cpp" />
     <ClCompile Include="Diagram\DiagramPlotItem.cpp" />
     <ClCompile Include="Diagram\DiagramTextItem.cpp" />
+    <ClCompile Include="Dialog\AboutDialog.cpp" />
+    <ClCompile Include="Dialog\ImageQualityDialog.cpp" />
+    <ClCompile Include="Dialog\PlotDialog.cpp" />
+    <ClCompile Include="Dialog\ProgressDialog.cpp" />
+    <ClCompile Include="Dialog\RawParameterDialog.cpp" />
+    <ClCompile Include="Dialog\SettingsDialog.cpp" />
     <ClCompile Include="Image\BaseImage.cpp" />
     <ClCompile Include="Image\DicomImage.cpp" />
     <ClCompile Include="Image\GeneralImage.cpp" />
@@ -65,16 +71,11 @@
     <ClCompile Include="Widget\CustomEvent.cpp" />
     <ClCompile Include="Widget\HistogramWidget.cpp" />
     <ClCompile Include="Widget\ImageQualityChartView.cpp" />
-    <ClCompile Include="Widget\ImageQualityDialog.cpp" />
     <ClCompile Include="Widget\LevelsWidget.cpp" />
     <ClCompile Include="Widget\MagnifierWidget.cpp" />
     <ClCompile Include="Widget\Peg.cpp" />
-    <ClCompile Include="Widget\PlotDialog.cpp" />
     <ClCompile Include="Widget\ProcessorShellWidget.cpp" />
     <ClCompile Include="Widget\ProcessorBaseWidget.cpp" />
-    <ClCompile Include="Widget\ProgressDialog.cpp" />
-    <ClCompile Include="Widget\RawParameterDialog.cpp" />
-    <ClCompile Include="Widget\SettingsDialog.cpp" />
     <ClCompile Include="Widget\ToolBoxWidget.cpp" />
     <ClCompile Include="Widget\WidgetManager.cpp" />
   </ItemGroup>
@@ -101,6 +102,12 @@
     <QtMoc Include="Diagram\DiagramArrowItem.h" />
     <QtMoc Include="Diagram\DiagramLengthItem.h" />
     <QtMoc Include="Diagram\DiagramImageQualityItem.h" />
+    <QtMoc Include="Dialog\ImageQualityDialog.h" />
+    <QtMoc Include="Dialog\PlotDialog.h" />
+    <QtMoc Include="Dialog\ProgressDialog.h" />
+    <QtMoc Include="Dialog\RawParameterDialog.h" />
+    <QtMoc Include="Dialog\SettingsDialog.h" />
+    <QtMoc Include="Dialog\AboutDialog.h" />
     <ClInclude Include="Image\DicomImage.h" />
     <ClInclude Include="Image\ImageData.h" />
     <QtMoc Include="Image\ImageReader.h" />
@@ -122,17 +129,12 @@
     <ClInclude Include="Processor\LevelsProcessor.h" />
     <QtMoc Include="Widget\MagnifierWidget.h" />
     <QtMoc Include="Widget\ChartView.h" />
-    <QtMoc Include="Widget\ImageQualityDialog.h" />
     <QtMoc Include="Widget\ImageQualityChartView.h" />
     <QtMoc Include="Processor\ThresholdSegmentationProcessor.h" />
     <QtMoc Include="Processor\LightFieldCorrectionProcessor.h" />
     <ClInclude Include="Widget\CustomEvent.h" />
     <ClInclude Include="Widget\Peg.h" />
     <QtMoc Include="Widget\ToolBoxWidget.h" />
-    <QtMoc Include="Widget\RawParameterDialog.h" />
-    <QtMoc Include="Widget\SettingsDialog.h" />
-    <QtMoc Include="Widget\PlotDialog.h" />
-    <QtMoc Include="Widget\ProgressDialog.h" />
     <QtMoc Include="Widget\ProcessorBaseWidget.h" />
     <QtMoc Include="Widget\ProcessorShellWidget.h" />
     <ClInclude Include="Widget\WidgetManager.h" />
